--- a/survey/core/templates/core/construction_site_steps_list.html
+++ b/survey/core/templates/core/construction_site_steps_list.html
@@ -24,7 +24,7 @@
             {% endif %}
         </ol>
     </nav>
-<!--</div>-->
+</div>
 
     <!--<div class="d-flex justify-content-center" style="margin-top: 20px">-->
         <!--<div class="col-md-2 col-lg-5">-->
