--- a/survey/userrole/templates/userrole/send_email_invitation.html
+++ b/survey/userrole/templates/userrole/send_email_invitation.html
@@ -12,9 +12,9 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">{% if request.user.is_superuser %}
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">{{ project }}</a></li>
                 {% else %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
-                    </li>
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
                 {% endif %}
                     <li class="breadcrumb-item active" aria-current="page">{{ project.name }} User List</li>
                 </ol>
