--- a/survey/templates/registration/password_change_form.html
+++ b/survey/templates/registration/password_change_form.html
@@ -13,18 +13,34 @@
                     <li class="breadcrumb-item active" aria-current="page">Password Change</li>
                 </ol>
     </nav>
-     <div class="d-flex justify-content-center">
-        <div class="col-md-4 col-lg-6">
-            <div class="dash-right">
-                <div class="widget-info margin-top-large">
-    <form action="" method="post">{% csrf_token %}
-        <p>Old password: {{ form.old_password }}</p>
-        <p>New password: {{ form.new_password1 }}</p>
-        <p>New password confirmation: {{ form.new_password2 }}</p>
-    <input type="submit" class="btn btn-primary">
+     <!--<div class="d-flex justify-content-center">-->
+        <!--<div class="col-md-4 col-lg-6">-->
+            <!--<div class="dash-right">-->
+                <!--<div class="widget-info margin-top-large">-->
+    <!--<form action="" method="post">{% csrf_token %}-->
+        <!--<p>Old password: {{ form.old_password }}</p>-->
+        <!--<p>New password: {{ form.new_password1 }}</p>-->
+        <!--<p>New password confirmation: {{ form.new_password2 }}</p>-->
+    <!--<input type="submit" class="btn btn-primary">-->
 
-    </form>
-                </div></div></div></div>
+    <!--</form>-->
+                <!--</div></div></div></div>-->
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    <form action="" method="post">{% csrf_token %}
+                        <p>Old password: {{ form.old_password }}</p>
+                        <p>New password: {{ form.new_password1 }}</p>
+                        <p>New password confirmation: {{ form.new_password2 }}</p>
+                        <div class="">
+                            <button type="submit" class="btn btn-success">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
 {% block extra_script %}
     {% render_bundle 'project' 'js' %}
