--- a/survey/templates/registration/user_list.html
+++ b/survey/templates/registration/user_list.html
@@ -10,14 +10,26 @@
                     <li class="breadcrumb-item active" aria-current="page">User List</li>
                 </ol>
             </nav>
-    <div class="d-flex justify-content-center">
-        <div class="col-md-3 col-lg-6">
-            <div class="dash-right">
-                <div class="widget-info margin-top-large">
-    {% for user in users %}
-    {{ forloop.counter }}. {{ user }}<br>
-    {% endfor %}
-                </div></div></div></div>
+    <!--<div class="d-flex justify-content-center">-->
+        <!--<div class="col-md-3 col-lg-6">-->
+            <!--<div class="dash-right">-->
+                <!--<div class="widget-info margin-top-large">-->
+    <!--{% for user in users %}-->
+    <!--{{ forloop.counter }}. {{ user }}<br>-->
+    <!--{% endfor %}-->
+                <!--</div></div></div></div>-->
+
+    <div class="formHolder">
+        <div class="widget-info margin-top-large">
+            <div class="widget-head">
+                <div class="widget-body mt-2 horizontalForm">
+                    {% for user in users %}
+                    {{ forloop.counter }}. {{ user }}<br>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock content %}
 {% block extra_script %}
