--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -57,6 +57,8 @@
                                         class="la la-tasks"></i> Edit</a>
                                 <a class="dropdown-item" href="{% url 'core:site_delete' object.pk %}"><i
                                         class="la la-cog"></i> Delete</a>
+                                <a class="dropdown-item" href=""><i
+                                        class="la la-tasks"></i> Checklist</a>
                             </div>
                         </div>
                     </div>
