--- a/survey/core/templates/core/construction_site_steps_list.html
+++ b/survey/core/templates/core/construction_site_steps_list.html
@@ -71,7 +71,7 @@
             <!--</div>-->
         <!--</div>-->
     <!--</div>-->
-       <div class="formHolder">
+    <div class="formHolder">
         <div class="widget-info margin-top-large">
             <div class="dash-right">
                 <div class="widget-info margin-top-large">
@@ -104,14 +104,11 @@
 
                             {% endfor %}
                             <div>
-                                <button type="submit" id="refresh" class="btn btn-success"></i>Update</button>
+                                <button type="submit" id="refresh" class="btn btn-success">Update</button>
                             </div>
                         </ul>
-
                     </form>
                     </p>
-
-
                 </div>
             </div>
         </div>
