--- a/survey/core/templates/core/checklist_all.html
+++ b/survey/core/templates/core/checklist_all.html
@@ -1,6 +1,7 @@
 {% extends '_base.html' %}
 
 {% block content %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="d-flex justify-content-center">
     <div class="formHolder">
@@ -17,7 +18,10 @@
                                 <table id="checklist" class="table table-hover table-striped">
                                     <thead>
                                         <tr>
+                                            <th>S.N</th>
                                             <th>Text</th>
+                                            <th>Status</th>
+
                                             <th>Edit</th>
                                             <th>Delete</th>
                                         </tr>
@@ -25,11 +29,14 @@
                                     <tbody>
                                         {% for checklist in checklists %}
                                         <tr>
+                                            <td>{{forloop.counter}}</td>
+                                            <td>{{checklist.text}}</td>
                                             <td>{% if checklist.status is True %}
-                                                <i class="fa fa-check-circle">fdgrt</i>
+                                                <i class="fa fa-check-circle"></i>
                                                 {% else %}
-                                                <i class="fa fa-times-circle">ergrg</i>
-                                                {% endif %}{{checklist.text}}</td>
+                                                <i class="fa fa-times-circle"></i>
+                                                {% endif %}</td>
+
                                             <td>Edit</td>
                                             <td><a href="{% url 'core:checklist_delete' checklist.pk %}">Delete</a></td>
                                         </tr>
