--- a/survey/core/templates/core/checklist_all.html
+++ b/survey/core/templates/core/checklist_all.html
@@ -3,6 +3,13 @@
 {% block content %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">{% if request.user.is_superuser %}
+        <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
+        {% endif %}
+    </ol>
+</nav>
+
 <div class="d-flex justify-content-center">
     <div class="formHolder">
         <div class="widget-info margin-top-large">
