--- a/survey/core/templates/core/configure_project_steps_form.html
+++ b/survey/core/templates/core/configure_project_steps_form.html
@@ -57,7 +57,7 @@
                     <div class="widget-head">
                         <h4><a href="#" title="">Step</a></h4>
                     </div>
-                    <form method="post">{% csrf_token %}
+                    <form method="post" enctype="multipart/form-data">{% csrf_token %}
                         <!--{{ form.as_p }}-->
                         <div class="form-row">
                             <div class="form-group col-md-6">
