checklist update form working

--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -57,7 +57,7 @@
                                         class="la la-tasks"></i> Edit</a>
                                 <a class="dropdown-item" href="{% url 'core:site_delete' object.pk %}"><i
                                         class="la la-cog"></i> Delete</a>
-                                <a class="dropdown-item" href="{% url 'core:checklist_all' %}"><i
+                                <a class="dropdown-item" href="{% url 'core:checklist_all' object.pk %}"><i
                                         class="la la-tasks"></i> Checklist</a>
                             </div>
                         </div>
