--- a/survey/core/templates/core/substep_checklist.html
+++ b/survey/core/templates/core/substep_checklist.html
@@ -91,7 +91,7 @@
                                                 <i class="fa fa-times-circle"></i>
                                                 {% endif %}</td>
 
-                                            <td>Edit</td>
+                                            <td><a href="{% url 'core:checklist_update' checklist.pk %}">Edit</a></td>
                                             <td><a href="{% url 'core:checklist_delete' checklist.pk %}">Delete</a></td>
                                         </tr>
                                         {%endfor%}
