--- a/survey/core/templates/core/checklist_form.html
+++ b/survey/core/templates/core/checklist_form.html
@@ -56,7 +56,7 @@
                             </div>
                             <div class="form-group col-md-12">
                                 <label for="inputSchoolName">Description</label>
-                                {{ form.text }}
+                                {{ form.description }}
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputSchoolName">Step</label>
@@ -83,8 +83,8 @@
 
  <script>
 
-     //var baseUrl = 'http://localhost:8000/';
-     var baseUrl = 'http://bccms.naxa.com.np/';
+     var baseUrl = 'http://localhost:8000/';
+     //var baseUrl = 'http://bccms.naxa.com.np/';
 
 
     $("#id_step").change(function () {
